--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   mongodb:
     image: mongo:6
-    container_name: mongo-organization
+    container_name: mongo-organizations
     restart: always
     ports:
       - "27018:27017"
 
     environment:
-      MONGO_INITDB_DATABASE: organization-api
+      MONGO_INITDB_DATABASE: organizations-api
     volumes:
       - ./mongo-data:/data/db
       - ./mongo-init:/docker-entrypoint-initdb.d
