--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "author": "",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "test": "jest",
@@ -47,6 +47,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0"
   },
@@ -65,8 +66,5 @@
     "winston": "^3.18.3",
     "zod": "^4.1.12",
     "zod-openapi": "^5.4.3"
-  },
-  "_moduleAliases": {
-    "@": "dist"
   }
 }
