--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,3 @@
-#services:
-#  mongodb:
-#    image: mongo:6
-#    container_name: mongo-organizations
-#    restart: always
-#    ports:
-#      - "27018:27017"
-#
-#    environment:
-#      MONGO_INITDB_DATABASE: organizations-api
-#    volumes:
-#      - ./mongo-data:/data/db
-#      - ./mongo-init:/docker-entrypoint-initdb.d
-
 services:
   mongodb:
     image: mongo:6
@@ -34,4 +20,4 @@ services:
     depends_on:
       - mongodb
     environment:
-      MONGO_URL_LOCAL: mongodb://mongodb:27017/organization-api
+      MONGO_URL_LOCAL: mongodb://mongodb:27017/organizations-api
